# cookiecutter-rust-actix-clean-architecture

./: .gitignore  README.md  cookiecutter.json  diesel.toml
docs/: article.md  onion-architecture-article.md
src/: container.rs  lib.rs  main.rs
{{cookiecutter.repo_name}}/: Cargo.toml
{{cookiecutter.repo_name}}/migrations/2022-11-25-082807_create_todo/: down.sql  up.sql
{{cookiecutter.repo_name}}/scripts/: run_postgres.sh
{{cookiecutter.repo_name}}/src/: container.rs  create_app.rs  lib.rs  main.rs
{{cookiecutter.repo_name}}/src/api/: errors.rs  middleware.rs  mod.rs
{{cookiecutter.repo_name}}/src/api/controllers/: mod.rs  service_context_handlers.rs  todo_handler.rs
{{cookiecutter.repo_name}}/src/api/dto/: todo.rs
{{cookiecutter.repo_name}}/src/domain/: constants.rs  error.rs  mod.rs
{{cookiecutter.repo_name}}/src/domain/models/: mod.rs  service_context.rs  todo.rs
{{cookiecutter.repo_name}}/src/domain/repositories/: mod.rs  repository.rs  todo.rs
{{cookiecutter.repo_name}}/src/domain/services/: service_context.rs  todo.rs
{{cookiecutter.repo_name}}/src/infrastructure/: error.rs  mod.rs  schema.rs
{{cookiecutter.repo_name}}/src/infrastructure/databases/: postgresql.rs
{{cookiecutter.repo_name}}/src/infrastructure/models/: mod.rs  service_context.rs
{{cookiecutter.repo_name}}/src/infrastructure/repositories/: todo.rs
{{cookiecutter.repo_name}}/src/infrastructure/services/: mod.rs  service_context.rs
{{cookiecutter.repo_name}}/src/services/: todo.rs
{{cookiecutter.repo_name}}/src/tests/api/: mod.rs  test_todo_controllers.rs
(+7 files in other folders)
